# -claude-seo-x-geo

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  NOTICE.md  README.md  brand.example.json  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  v2.yml
agents/: geo-ai-visibility.md  geo-platform-analysis.md  seo-performance.md  seo-visual.md
docs/: ARCHITECTURE.md  WORKFLOW-public-private.md
docs/reference/: MERGE_SPEC_claude-seo-x-geo.md
extensions/ahrefs/: uninstall.sh
extensions/bing-webmaster/: install.ps1  install.sh  uninstall.sh
extensions/geo-dashboard/: install.ps1  install.sh  uninstall.sh
extensions/gsc-mcp/: install.ps1  install.sh  uninstall.sh
extensions/profound/: install.ps1  install.sh  uninstall.sh
extensions/seranking/: install.ps1  install.sh  uninstall.sh
extensions/unlighthouse/: uninstall.sh
schema/: article-author.json  software-saas.json  website-searchaction.json
scripts/: brand_config.py  brand_scanner.py  citability_scorer.py  google_report.py  llmstxt_generator.py
skills/geo-brand-mentions/: SKILL.md
skills/seo-audit/: SKILL.md
tests/: test_content_quality.py  test_geo_brand_scanner.py  test_geo_citability.py  test_google_report_full_audit.py  test_lazy_detection.py  test_llmstxt_policy.py  test_manifest_consistency.py  test_parasite_risk_and_extensions.py  test_phase_j_executable.py  test_portability.py  test_pyproject_metadata.py  test_render_page.py  test_technical_depth.py
(+58 files in other folders)
